# qbi2025-ex1-zhouyu-zhang

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: classroom.yml
exercise/: Assignment_01_Images.ipynb  Assignment_01_Images_solution.ipynb  sinc.npz  tasks.py  test_exercise1.py
