[project]
name = "quantitative-big-imaging-2025-remake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pytest>=8.3.4",
    "scikit-image>=0.25.1",
    "scipy>=1.15.1",
]
